# mapdispatch

./: .gitignore  README.md  pyproject.toml
src/pyclosure/: multimethod.py
src/pyclosure/examples/: zoo.py
tests/: test_multimethod.py
