[project]
name = "pyclosure"
version = "0.1.0"
description = "Clojure-style multimethods and dispatch system for Python"
authors = [
  { name = "Gwang-Jin Kim", email = "gwang.jin.kim.phd@gmail.com" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/gwangjinkim/pyclosure"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[pyproject.scripts]
pyclosure-zoo = "pyclosure.examples.zoo:main"
